<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutItemList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1023"
    android:theme="@style/Theme.MyBirthdayReminder.BackNav"
    tools:context=".AddBirthdayActivity">

    <Switch
        android:id="@+id/switchNotifications"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/settings_option_gradient"
        android:padding="10dp"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="10"
        android:text="@string/botMenu_notifications"
        android:textAlignment="textStart"
        android:textColor="@color/green_primaryColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/switchAnimations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Settings"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:minHeight="?attr/actionBarSize"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_icon"
        app:subtitleTextColor="@android:color/transparent"
        app:titleTextColor="@android:color/transparent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/white_extraColor"
        android:shadowRadius="15"
        android:text="@string/botMenu_settings"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/green_primaryColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchAnimations"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/settings_option_gradient"
        android:padding="10dp"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="10"
        android:text="@string/settingsAnimations"
        android:textAlignment="textStart"
        android:textColor="@color/green_primaryColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupAnimation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchNotifications"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView_AboutUs"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/settings_option_gradient"
        android:clickable="true"
        android:focusable="auto"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="10"
        android:text="@string/settingsAbout_us"
        android:textAllCaps="true"
        android:textColor="@color/green_primaryColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAnimation" />

    <RadioGroup
        android:id="@+id/radioGroupAnimation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:checkedButton="@id/radioButtonNormal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView_AboutUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchAnimations">

        <RadioButton
            android:id="@+id/radioButtonSlow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/settings_option_gradient"
            android:backgroundTint="#44AE89"
            android:fontFamily="sans-serif-medium"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/settingsSlow"
            android:textColor="@color/green_primaryColor"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_option_gradient"
            android:backgroundTint="#0D2783"
            android:fontFamily="sans-serif-medium"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/settingsNormal"
            android:textAlignment="viewStart"
            android:textColor="@color/green_primaryColor"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonFast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/settings_option_gradient"
            android:backgroundTint="#9F0D7F"
            android:fontFamily="sans-serif-medium"
            android:shadowColor="#FFFFFF"
            android:shadowRadius="10"
            android:text="@string/settingsFast"
            android:textColor="@color/green_primaryColor"
            android:textStyle="bold" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>