<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutItemList"
    style="@style/Theme.MyBirthdayReminder.BackNav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addbirthday_gradient"
    android:theme="@style/Theme.MyBirthdayReminder.BackNav"
    tools:context=".AddBirthdayActivity">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/settings_option_gradient"
        android:text="@string/addBirthday_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="name"
        android:background="#E1BD67"
        android:fontFamily="monospace"
        android:hint="@string/addBirthday_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attachButton"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="creditCardExpirationDate"
        android:background="#E1BD67"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="monospace"
        android:hint="@string/addBirthday_birthdate"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/settings_option_gradient"
        android:text="@string/addBirthday_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Button
        android:id="@+id/attachButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/settings_option_gradient"
        android:text="@string/addBirthday_attachImage"
        app:icon="@drawable/upload_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayPreviewPhoto"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/birthdayPreviewPhoto"
        android:layout_width="177dp"
        android:layout_height="154dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add"
        app:srcCompat="@drawable/cumpleanero" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:minHeight="?attr/actionBarSize"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_icon"
        app:subtitleTextColor="@android:color/transparent"
        app:titleTextColor="@android:color/transparent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>