<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutInputText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#160D2E"
    android:padding="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="101dp"
        android:layout_height="115dp"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="-30dp"
        android:rotation="270"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adorno1" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="101dp"
        android:layout_height="115dp"
        android:layout_marginStart="-30dp"
        android:layout_marginBottom="-30dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/adorno1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="101dp"
        android:layout_height="115dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="-30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adorno1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="101dp"
        android:layout_height="115dp"
        android:layout_marginEnd="-30dp"
        android:layout_marginBottom="-30dp"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/adorno1" />

    <AutoCompleteTextView
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#4F2875"
        android:gravity="start|top"
        android:hint="@string/insertTextHint"
        android:imeOptions="actionDone"
        android:inputType="textAutoCorrect"
        android:padding="20dp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#8FFFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelInsert" />

    <TextView
        android:id="@+id/textViewLabelInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed"
        android:shadowColor="@color/white_extraColor"
        android:shadowRadius="30"
        android:text="@string/insertTextLabel"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/green_primaryColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/settings_option_gradient"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="20"
        android:text="@string/inputButtonSend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/settings_option_gradient"
        android:shadowColor="#FFFFFF"
        android:shadowRadius="20"
        android:text="@string/inputButtonCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

</androidx.constraintlayout.widget.ConstraintLayout>